<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings1"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings1"/>
    
    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings2"/>
    
    <item
        android:id="@+id/action_settings3"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings3"/>
    
    <item
        android:id="@+id/action_sub_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sub_settings">
        
        <menu>
            <group>
                <item
                	android:id="@+id/action_sub_item1"
        			android:orderInCategory="100"
        			android:showAsAction="never"
        			android:title="@string/action_sub_string1" />
                
                <item
                	android:id="@+id/action_sub_item2"
        			android:orderInCategory="100"
        			android:showAsAction="never"
        			android:title="@string/action_sub_string2" />
                
                <item
                	android:id="@+id/action_sub_item3"
        			android:orderInCategory="100"
        			android:showAsAction="never"
        			android:title="@string/action_sub_string3" />
                
			</group>      
        </menu>
	</item>

</menu>
